# Halgebra

./: .gitignore  .project  Halgebra.cabal  README.md  r.bat
src/: Main.hs
src/Halgebra/: ExprTree.hs
src/Utils/: Helpers.hs
test/: HalgebraTests.hs  RealTests.hs
test/Halgebra/: ExprTreeTests.hs
test/Utils/: HelpersTest.hs
